##########################################################################
# Copyright (c) 2021-2022 AirTies Wireless Networks
#
# Licensed under the BSD+Patent License.
##########################################################################

add_subdirectory(libplatform)
add_subdirectory(ieee1905)
add_subdirectory(ssp)
add_subdirectory(controller)
add_subdirectory(tools)
