##########################################################################
# Copyright (c) 2021-2022 AirTies Wireless Networks
#
# Licensed under the BSD+Patent License.
##########################################################################

project(tools
    DESCRIPTION "tools"
    LANGUAGES C
)

add_subdirectory(map_cli)
